added all the spacing and backgrounds

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "editor.fontFamily": "sono",
-    "terminal.integrated.fontFamily": "sono"
+    "terminal.integrated.fontFamily": "sono",
+    "terminal.integrated.fontSize": 16
 }
